rust/kcl-lib/tests/consumed_solid_appearance/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing consumed_solid_appearance.kcl
---
KCL Semantic error

  × semantic: `target` was already consumed by a `subtract` operation. The
  │ operation result is now in `result`; use that for subsequent operations.
    ╭─[28:10]
 27 │ result = subtract(target, tools = [tool])
 28 │ styled = appearance(target, color = "#ff0000")
    ·          ──────────────────┬──────────────────┬
    ·                            │                  ╰── tests/consumed_solid_appearance/input.kcl
    ·                            ╰── tests/consumed_solid_appearance/input.kcl
    ╰────
  ╰─▶ KCL Semantic error
      
        × semantic: `target` was already consumed by a `subtract` operation.
        │ The operation result is now in `result`; use that for subsequent
        │ operations.
          ╭─[28:21]
       27 │ result = subtract(target, tools = [tool])
       28 │ styled = appearance(target, color = "#ff0000")
          ·                     ───┬──
          ·                        ╰── tests/consumed_solid_appearance/
      input.kcl
          ╰────
